--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 
 dependencies:
   mongo_dart: ^0.3.6
-  http_server: ^0.9.8+1
+  http_server: ^1.0.0
 
 dev_dependencies:
   pedantic: ^1.0.0
